--- a/index.html
+++ b/index.html
@@ -11,30 +11,22 @@
     <h1 class="text-3xl font-semibold mb-6 text-center text-blue-600">Registration Form</h1>
 
     <form id="registration-form" class="bg-white rounded-lg shadow p-6 flex flex-col gap-4">
-      <div class="flex gap-4">
-        <label class="w-24 font-semibold" for="name">Name</label>
-        <input class="flex-grow px-3 py-2 border rounded-md" type="text" id="name" required>
-      </div>
-
-      <div class="flex gap-4">
-        <label class="w-24 font-semibold" for="email">Email</label>
-        <input class="flex-grow px-3 py-2 border rounded-md" type="email" id="email" required>
-      </div>
-
-      <div class="flex gap-4">
-        <label class="w-24 font-semibold" for="password">Password</label>
-        <input class="flex-grow px-3 py-2 border rounded-md" type="password" id="password" required>
-      </div>
-
-      <div class="flex gap-4">
-        <label class="w-24 font-semibold" for="dob">Date of Birth</label>
-        <input class="flex-grow px-3 py-2 border rounded-md" type="date" id="dob" required>
-      </div>
-
-      <div class="flex gap-4 items-center">
-        <input class="mr-2 leading-tight" type="checkbox" id="accepted-terms" required>
-        <label class="text-sm" for="accepted-terms">Accepted Terms</label>
-      </div>
+        <label class="block font-semibold mb-1" for="name">Name</label>
+        <input class="block w-full px-3 py-2 border rounded-md" type="text" id="name" required>
+  
+        <label class="block font-semibold mb-1 mt-4" for="email">Email</label>
+        <input class="block w-full px-3 py-2 border rounded-md" type="email" id="email" required>
+  
+        <label class="block font-semibold mb-1 mt-4" for="password">Password</label>
+        <input class="block w-full px-3 py-2 border rounded-md" type="password" id="password" required>
+  
+        <label class="block font-semibold mb-1 mt-4" for="dob">Date of Birth</label>
+        <input class="block w-full px-3 py-2 border rounded-md" type="date" id="dob" required>
+  
+        <label class="block font-semibold mt-4 mb-2" for="accepted-terms">
+          <input class="mr-2 leading-tight" type="checkbox" id="accepted-terms" required>
+          <span class="text-sm">Accept Terms</span>
+        </label>
 
       <button class="mt-4 bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700" type="submit">Submit</button>
     </form>
