--- a/index.html
+++ b/index.html
@@ -2,92 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <title>Registration Form</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
-    <div class="max-w-md w-full p-6 bg-white rounded shadow-md">
-        <h2 class="text-2xl font-semibold text-center mb-4">Registration Form</h2>
-        <form id="registration-form" class="space-y-4">
-            <div>
-                <label for="fullName" class="block mb-1">Full Name</label>
-                <input type="text" id="fullName" class="w-full px-3 py-2 border rounded focus:outline-none focus:border-purple-500" required>
-            </div>
-            <div>
-                <label for="email" class="block mb-1">Email</label>
-                <input type="email" id="email" class="w-full px-3 py-2 border rounded focus:outline-none focus:border-purple-500" required>
-            </div>
-            <div>
-                <label for="dob" class="block mb-1">Date of Birth</label>
-                <input type="date" id="dob" class="w-full px-3 py-2 border rounded focus:outline-none focus:border-purple-500" required>
-                <p id="dob-error" class="text-red-500 text-sm mt-1"></p>
-            </div>
-            <div>
-                <label class="flex items-center">
-                    <input type="checkbox" id="agree-terms" class="mr-2">
-                    I agree to the terms and conditions
+<body>
+    <h2><center>Registration Form</h2></center>
+    <div class="container mx-auto w-5/12 py-10 shadow-md">
+        <form class="w-full max-w-sm" id="user-form">
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/3">
+                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="name">
+                  Name
                 </label>
+              </div>
+              <div class="md:w-2/3">
+                <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="name" type="text" placeholder="enter full name here">
+              </div>
             </div>
-            <div>
-                <button type="submit" class="w-full bg-purple-500 text-white py-2 px-4 rounded-md hover:bg-purple-400 focus:outline-none focus:border-purple-500">
-                    Register
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/3">
+                  <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="email">
+                    Email
+                  </label>
+                </div>
+                <div class="md:w-2/3">
+                  <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="email" type="email" placeholder="enter email here">
+                </div>
+              </div>
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/3">
+                <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="password">
+                  Password
+                </label>
+              </div>
+              <div class="md:w-2/3">
+                <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" id="password" type="password" placeholder="******************">
+              </div>
+            </div>
+            <div class="md:flex md:items-center mb-6">
+                <div class="md:w-1/3">
+                  <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="dob">
+                    Date of Birth
+                  </label>
+                </div>
+                <div class="md:w-2/3">
+                  <input required class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-purple-500 focus:invalid:border-pink-500" max="2005-01-11" min="1968-01-11" id="dob" type="date">
+                </div>
+              </div>
+            <div class="md:flex md:items-center mb-6">
+              <div class="md:w-1/3"></div>
+              <label class="md:w-2/3 block text-gray-500 font-bold" for="accept-terms">
+                <input required class="mr-2 leading-tight" type="checkbox" id="accept-terms">
+                <span class="text-sm">
+                  Accept Terms!
+                </span>
+              </label>
+            </div>
+            <div class="md:flex md:items-center">
+              <div class="md:w-1/3"></div>
+              <div class="md:w-2/3">
+                <button class="shadow bg-purple-500 hover:bg-purple-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded " 
+                  type="submit">
+                  Sign Up
                 </button>
+              </div>
             </div>
-        </form>
+          </form>
+          
     </div>
-    <div class="max-w-md w-full mt-4 bg-white rounded shadow-md p-6">
-        <h2 class="text-lg font-semibold mb-2">Entries</h2>
-        <div id="registrationDetailsDiv" class="overflow-x-auto">
-            <table class="table-auto w-full">
-                <thead>
-                    <tr>
-                        <th class="px-4 py-2">Full Name</th>
-                        <th class="px-4 py-2">Email</th>
-                        <th class="px-4 py-2">Date of Birth</th>
-                        <th class="px-4 py-2">Agreed Terms</th>
-                    </tr>
-                </thead>
-                <tbody id="entriesTableBody">
-                    <!-- Entries will be displayed here dynamically using JavaScript -->
-                </tbody>
-            </table>
-        </div>
+    <div class="relative bg-white px-6 mt-5 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 sm:mx-auto sm:rounded-lg sm:px-10">
+      <div class="mx-auto">
+        <h2 class="text-3xl text-center font-bold leading-tight">Entries</h2>
+        <div class="divide-y divide-gray-300/50" id="userEntriesDiv"></div>
+
+      </div>
+
     </div>
-    
-    <script>
-        // Separated JavaScript code
-        let registrationForm = document.getElementById("registration-form");
-        const entriesTableBody = document.getElementById("entriesTableBody");
-        const dobError = document.getElementById("dob-error");
-
-        // Function to display saved registrations
-        const displayRegistrations = () => {
-            entriesTableBody.innerHTML = ""; // Clear existing entries
-            const registrations = getStoredRegistrations();
-            registrations.forEach((registration) => {
-                const row = document.createElement("tr");
-                const nameCell = createTableCell(registration.fullName);
-                const emailCell = createTableCell(registration.email);
-                const dobCell = createTableCell(registration.dateOfBirth);
-                const agreedTermsCell = createTableCell(registration.agreedTerms ? "Yes" : "No");
-                row.appendChild(nameCell);
-                row.appendChild(emailCell);
-                row.appendChild(dobCell);
-                row.appendChild(agreedTermsCell);
-                entriesTableBody.appendChild(row);
-            });
-        }
-
-        // Function to create a table cell
-        const createTableCell = (text) => {
-            const cell = document.createElement("td");
-            cell.classList.add("border", "px-4", "py-2");
-            cell.textContent = text;
-            return cell;
-        }
-
-    </script>
+<script src="./index.js"> </script>
 </body>
 </html>
-
